metacatui/src/main/webapp/js/themes/arctic/css/metacatui.css
/* ... */
#toggle-map{
	left: -124px;
}

.mapMode #toggle-map{
	left: -104px;
	top: 124px;
}

#toggle-map i{
	margin-left: 10px;
	font-size: 24px;
	margin-right: 4px;
}

#toggle-map:hover{
	left: 0px;
}

#show-map-control{
	display: block;
}

.mapMode #show-map-control{
	display: none;
}

#hide-map-control{
	display: none;
}

.mapMode #hide-map-control{
	display: block;
}
#map-canvas{
	height: 100%;
	width: 100%;
}
.gmaps-infowindow{
	max-height: 400px;
	overflow-y:scroll;
	-webkit-transform: translate3d(0,0,0); 	
}

/* Fixes Infowindow popup problem - interaction with bootstrap? */
img[src*="gstatic.com/"], img[src*="googleapis.com/"]  {
    max-width: 99999px;
}



#edit-map{
	font-size: 14px;
	line-height: 17px;
	color: #1C6E84;
	border-bottom: 1px dotted #1C6E84;
	position: absolute;
	top: 25px;
	left: 160px;
}


/* Data Catalog CSS
-------------------------------------------------- */
#mainBody {
	min-height: 800px;
	margin-top: 0px;
	padding-left: 10px;
}
 
    
/* NAVIGATION
-------------------------------------------------- */
	.breadcrumb{
	  margin-top: 120px;
	}
    .mapMode #Header{
    	position: relative;
    }
    #Navbar{
    	position: fixed;
    	width: 100%;
    	z-index: 1;
    	background-color: #FFF;
    }
    .center {
      float: none;
      margin: 0 auto;
    }
    
    .show-new-dataCatalogView{
    	cursor: pointer;
    }
    
    .navbar {
      position: relative;
      border: none;   
    }

    .navbar-inner {
      border: none;
      z-index: 220;
      height: 50px;
    }
    
    .navbar .nav > .brand-container{
    	margin-right: 50px;
    	margin-left: 50px;
    }
    .navbar .nav > li > a.brand {
      padding: 0px;
      margin-top: 0px;
    }
    .navbar .nav > li > a.brand img{
    	height: 70px;
    }
    .navbar .brand-name {
    	margin-left: 10px;
    	font-size: 1em;
    	text-transform: none;
	}
  
    .navbar .nav > li > * {
      margin: 0px 5px 7px 5px;
    }

    .navbar .nav > li > a {
        font-size: 1.2em;
	    font-weight: normal;
	    line-height: 1em;
	    color: #333;
	    margin-top: 15px;
	    text-shadow: none;
    }
    
    .navbar .nav > li > a.btn-primary{
    	color: #FFF;
    	text-shadow: none;
    }
    
    .navbar .nav > li form{
    	margin-top: 15px;
    }

    .navbar .nav > li > a:focus,
    .navbar .nav > li > a:hover {
      color: #146660;
      background-color:transparent;
      font-weight: 400;
      text-decoration: none;
      text-shadow: none;
    }
    
    .navbar .nav > .active > a,
    .navbar .nav > .active > a:hover,
    .navbar .nav > .active > a:focus {
      color: #146660;
      font-weight: 400;
      text-decoration: none;
      background-color: #E5E5E5;
      -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
      border-radius: 5px;
      -webkit-box-shadow: none; /*inset 0 3px 8px rgba(0, 0, 0, 0.125);*/
         -moz-box-shadow: none; /*inset 0 3px 8px rgba(0, 0, 0, 0.125);*/
              box-shadow: none; /*inset 0 3px 8px rgba(0, 0, 0, 0.125);*/
    }
    
    .navbar .nav > li > a.brand:focus,
    .navbar .nav > li > a.brand:hover {
    	background-color: transparent;
    }

    /* Offset the responsive button for proper vertical alignment */
    .navbar .btn-navbar {
      margin-top: 10px;
    }

    /* Offset the search div for proper vertical alignment */
    .navbar .input-append {
      margin: 5px 0px 0px 0px;
      z-index: 290;
    }
    #Navbar .user {
    	font-size: 14px;
    }
    #Content{
    	padding-top: 160px;
    }
    .mapMode #Content{
    	padding-top: 0px;
    }
    
    .navbar .nav {
      margin-top: 8px;
    }
    
    #Content > .nav-tabs{
        padding-left: 25px;
    	width: calc(100% - 50px);
    	padding-right: 25px;
    }
    
    .dropdown-header {
		display: block;
		padding: 3px 20px;
		font-size: 12px;
		line-height: 1.42857143;
		color: #666;
	}
	
	.header .nav .icon{
		margin-right: 5px;
	}
	.header .login-container{
		margin-left: 20px;
	}
    
    /** Backbone override for dropdowns so they dsplay on hover rather than click **/
    .dropdown-menu .sub-menu {
	    left: 100%;
	    position: absolute;
	    top: 0;
	    visibility: hidden;
	    margin-top: -1px;
	}
	
	.dropdown-menu li:hover .sub-menu {
	    visibility: visible;
	}
	
	.dropdown:hover .dropdown-menu {
	    display: block;
	}
	
	.dropdown:hover .dropdown-menu.hidden,
	.dropdown-menu.hidden{
		display: none;
	}
	
	.navbar .nav li.dropdown.open > .dropdown-toggle{
		color: #555555;
		background-color: transparent;
	}
	
	.nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
	    margin-top: 0;
	}
	
	.navbar .sub-menu:before {
	    border-bottom: 7px solid transparent;
	    border-left: none;
	    border-right: 7px solid rgba(0, 0, 0, 0.2);
	    border-top: 7px solid transparent;
	    left: -7px;
	    top: 10px;
	}
	.navbar .sub-menu:after {
	    border-top: 6px solid transparent;
	    border-left: none;
	    border-right: 6px solid #fff;
	    border-bottom: 6px solid transparent;
	    left: 10px;
	    top: 11px;
	    left: -6px;
	}
	
	/** Inputs in the navbar **/
	.nav .input > form > input[type="text"]{
		border: 1px solid #CCC;
  		border-right: 0px;
	}
	.nav .input > form > .btn{
		background-color: #EEE;
  		border: 1px solid #CBCBCB;
	}



  /* MAIN BODY CSS
  -------------------------------------------------- */
  /* Main body containing sidebar and content */
    .main-body-padded {
      padding-top: 90px;
    }
    
	.subset-choice.keyword-search-link {
		background-color: #115E95;
		color: white;
		text-shadow: none;
		margin-bottom: 10px;
	}
	
	.keyword-search-link.active{
		background-color: #1981CC;
	}

    h2.nav-header {
      margin: 20px 10px 10px 15px;
      padding: 3px 0px 3px 0px;
      color: #555555;      
    }

/* User profile  
  -------------------------------------------------- */ 
.user-view-section > section{
	width: 100%;
}  
/* ... */

